# InputLagScope

./: LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: app-version.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  clock.rs  device_probe.rs  headless.rs  hid_descriptor.rs  latency_distribution.rs  lib.rs  main.rs  measurement.rs  models.rs  polling_rate.rs  protocol.rs  serial_trigger.rs  stats.rs  thread_tuning.rs  windows_hid.rs  xinput.rs
