[package]
name = "inputlagscope"
version = "1.0.0"
description = "InputLagScope low-level controller latency tester"
authors = ["InputLagScope"]
edition = "2021"
license = "MIT"

[lib]
name = "inputlagscope_lib"
crate-type = ["rlib"]

[[bin]]
name = "InputLagScope"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
hidapi = { version = "2", features = ["windows-native"] }
libloading = "0.8"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tauri = { version = "2", features = [] }
thiserror = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input"
] }
